--- a/src/classes/StagingClass.cls
+++ b/src/classes/StagingClass.cls
@@ -1,4 +1,5 @@
 public class StagingClass {
     public String name {get; set;}
     public String name2 {get; set;}
+    public String name3 {get; set;}
 }
